	another equip item of the some category.
	* Fixed packet for cursed scrolled equips.
	* Scroll no longer consumed if equip has no upgrade slots.
	* Fixed player's remaining HP/MP being clipped to base max HP/MP on login.
	Don't clip remaining HP/MP until after equip max HP/MP bonuses are applied.

2012-08-23  GoldenKevin  (revision 125)

	* Removed unused PartyMemberListener class.
	* Fixed any unsorted import blocks.
	* Updated switch-cases to use a consistent formatting style.
	* Added private constructors and final modifier to utility classes.
	* Added final modifier to instance variables where appropriate.
	* Removed Game prefix from names of game server handler utility classes.

2012-08-23  GoldenKevin  (revision 126)

	* Some cleanup of changes made in the last revision.
	* Added interface for login server features that have been implemented but
	unused. The login.properties file customizes these features.

2012-08-23  GoldenKevin  (revision 127)

	* Removed balloon message debug statement in LoginServer.
	* MapleAesOfb class renamed to ClientEncryption.
	* Removed current directory from classpath in *.bat and *.sh scripts.
	* Packaged Bouncy Castle 1.47 provider for JDK 1.5 - JDK 1.7.
	* Bouncy Castle lightweight API is now used instead of JCE for AES
	encryption. Removed illegal key size checks in server inits as we are no
	longer dependent on JCE unlimited strength jurisdiction files.
	* Use Bouncy Castle instead of JCA for SHA digest in HashFunctions class.

2012-08-24  GoldenKevin  (revision 128)

	* Renamed ClientEncryption.aesCrypt to aesOfbCrypt.
	* Split a loop of aesOfbCrypt into several loops in order to reduce number
	of conditional checks and make the routine marginally faster. Also removed
	unnecessary try-catch block and Logger.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.